<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/default_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/failed"
        android:text="@string/failed"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/camera_bottom_button_border" >

        <Button
            android:id="@+id/tryAgain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:text="@string/tryAgain" />
        <Button
            android:id="@+id/cancelFail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/cancelButton"
            android:layout_toRightOf="@id/tryAgain"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>