<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/default_background"
    android:label="@string/app_name" >

    <Button
        android:id="@+id/callPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:background="@drawable/photo_button"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/callPhotoButton"
        android:layout_centerHorizontal="true"
        android:text="@string/callPhotoButton"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:text="@string/callLoadButton"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/callLoadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_weight="1"
        android:background="@drawable/load_button"
        android:padding="10dp" />

    <Button
        android:id="@+id/manualButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_weight="1"
        android:background="@drawable/manual_button"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/manualButton"
        android:text="Manual Entry"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>